# proj_win_deploy

./: .gitignore  .gitmodules  README.md  build_proj.bat  build_sample.bat  proj.patch
.github/workflows/: build_win.yml
sample_app/: CMakeLists.txt  grid_transform.cpp  main.cpp  simple_transform.cpp
